Adding stripe validation for card

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <!--21.265 Add stipe.js link to index.html -> checkout-payment.html-->
+  <script src="https://js.stripe.com/v3/"></script>
 </body>
 </html>
